FEAT: Added alternate window feature
