# model/request.go
@@ -8,10 +8,11 @@ import (
 //
 // swagger:model EventForecastRequest
 type EventForecastRequest struct {
-	Name      string        `json:"name" binding:"required"`
-	Location  Location      `json:"location" binding:"required"`
-	StartTime *iso8601.Time `json:"start_time" binding:"required"`
-	EndTime   *iso8601.Time `json:"end_time" binding:"required"`
+	Name       string        `json:"name" binding:"required"`
+	Location   Location      `json:"location" binding:"required"`
+	StartTime  *iso8601.Time `json:"start_time" binding:"required"`
+	EndTime    *iso8601.Time `json:"end_time" binding:"required"`
+	ListAlters bool          `json:"list_alternates,omitempty"`
 }
 
 // Location represents a geographic coordinate.
