# model/response.go
@@ -4,9 +4,10 @@ package model
 //
 // swagger:model EventForecastResponse
 type EventForecastResponse struct {
-	Classification string           `json:"classification"`
-	Severity       int              `json:"severity"`
-	Summary        string           `json:"summary"`
-	Reasons        []string         `json:"reasons"`
-	ForecastWindow []HourlyForecast `json:"forecast_window"`
+	Classification   string           `json:"classification"`
+	Severity         int              `json:"severity"`
+	Summary          string           `json:"summary"`
+	Reasons          []string         `json:"reasons"`
+	ForecastWindow   []HourlyForecast `json:"forecast_window"`
+	AlternateWindows []EventWindow    `json:"alternate_timings,omitempty"`
 }
